syntax = "proto3";

package usertracker;

option go_package = "usertracker";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";


option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message UserUpdateDesc {
    string user = 1;
    int64 updatedAt = 2;
}